MC-3 Status: 🟡 Partial MC-4A Status: ✅ Complete MC-4B Status: 🟡 Partial MC-4C Status: 🟡 Partial MC-5 Status: ❌ Not implemented MC-6 Status: 🟡 Partial MC-7 Status: ❌ Not implemented ايضا نظام التقارير غير مكتمل